tests/fixtures/compile-errors/not-called-as-function/input.nim
import strformat,options

import ../../../../dist/typecheck.macro
createValidator
